--- a/repositories.html
+++ b/repositories.html
@@ -4,6 +4,9 @@
 	<title>Ficha tecnica de los usuarios</title>
 	<script src="jquery/jquery-3.3.1.min.js" type="text/javascript" "></script>
 	<script type="text/javascript" src="functions.js"></script>
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="bootstrap/css/bootstrap-grid.min.css" crossorigin="anonymous">
+	<script src="bootstrap/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
 	<div>
