Correcciones en la posicion
Se aÃadio color al fondo de la tarjeta y al fondo del avatar de usuario,
se centro el contenido y se aÃadio un layout basico

--- a/repositories.html
+++ b/repositories.html
@@ -9,8 +9,16 @@
 	<script src="bootstrap/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div>
-		<section class="container">
+	<div class="container container-fluid" style="background-color: #20B2AA;">
+		<header class="header">
+		<div class="row" >
+		<h1><b><i>Ficha técnica de los usuarios</i></b></h1>
+		</div>
+		</header>
+	</div>
+	
+	<div align="center">
+		<section class="container mt-8 pt-3" >
 			<div id="ficha_tecnica"></div>
 		</section>
 	</div>
